<resources xmlns:tools="http://schemas.android.com/tools">
<string name="app_name">WishingWell</string>
<string name="app_slogan">时刻准备着</string>
<string name="register_title_student">学生注册</string>
<string name="register_title_teacher">老师注册</string>
<string name="register_nation_code_default">+86</string>
<string name="register_account_input_hint">请输入手机号码</string>
<string name="register_password_input_hint">请输入密码<font size="10">（由8-20个英文字母、数字、符号构成）</font></string>
<string name="register_next_button_text">下一步</string>
<string name="register_exist_account_button_text">已有帐号，直接登录</string>
<string name="register_tips_account_error">请输入正确的手机号码</string>
<string name="register_tips_password_error">密码由8-20个英文字母、数字、符号构成</string>
<string name="register_tips_account_exist">你的帐号已在YY注册，请直接登录</string>
<string name="register_tips_web_register_error">业务系统注册失败</string>
<string name="register_tips_loading">注册中，请稍候</string>
<string name="verify_title">手机验证</string>
<string name="verify_tips">已将验证码发送到</string>
<string name="verify_sms_signature">【YY语音】</string>
<string name="verify_code_input_hint">请输入验证码</string>
<string name="verify_resend_button_text_resend">重新获取</string>
<string name="verify_resend_button_text_sending">正在获取</string>
<string name="verify_register_button_text">注册</string>
<string name="teacher_info_name_hint">您的姓名</string>
<string name="teacher_info_name_empty_tips">姓名必须填写</string>
<string name="teacher_info_subject">学科</string>
<string name="teacher_info_subject_hint">选择学科</string>
<string name="teacher_info_skill_hint">擅长领域：如二次函数</string>
<string name="teacher_info_commit_button_text">提交</string>
<string name="setting_item_avatar">头像</string>
<string name="setting_item_name">姓名</string>
<string name="setting_item_grade">年级</string>
<string name="setting_item_subject">科目</string>
<string name="setting_item_school">学校</string>
<string name="setting_item_teacher_age">教龄</string>
<string name="setting_view_title">个人资料</string>
<string name="setting_user_description">个人介绍</string>
<string name="setting_user_description_hint">请输入个人介绍</string>
<string name="setting_modify_name">修改姓名</string>
<string name="setting_modify_name_hint">请输入5字以内姓名</string>
<string name="setting_modify_school">修改学校</string>
<string name="setting_modify_school_hint">请输入15字以内学校名</string>
<string name="setting_commit_success">修改成功</string>
<string name="setting_commit_failed">修改失败</string>
<string name="setting_upload_avatar_failed">上传头像失败</string>
<string name="wrong_passport">帐号错误，请重新输入</string>
<string name="wrong_password">密码错误，请重新输入</string>
<string name="passport_not_exist">帐号不存在</string>
<string name="login_failed">登录失败</string>
<string name="login_web_server_failed">登录到业务系统失败</string>
<string name="no_network_now">当前无可用网络</string>
<string name="login">登录</string>
<string name="login_lite_title">手机帐号登录</string>
<string name="login_pic_refresh_button_text">换一张</string>
<string name="login_pic_dialog_title">为保障你的帐号安全，请输入下图中的验证码</string>
<string name="login_token_dialog_title">为保障你的帐号安全，请输入动态口令</string>
<string name="login_token_failed">动态口令有误，请重新输入</string>
<string name="register">注册</string>
<string name="forgot_password">忘记密码</string>
<string name="logout">注销</string>
<string name="edit">编辑</string>
<string name="done">完成</string>
<string name="select">选择</string>
<string name="really_to_logout">确定退出当前帐号？</string>
<string name="edit_setting_fail">个人资料修改失败， 暂不支持</string>
<string name="edit_setting_success">个人资料修改成功！</string>
<string name="already_new_version">已经是最新版本</string>
<string name="update_error">更新失败，请重试</string>
<string name="now_update">马上升级</string>
<string name="ignore_update">忽略本次升级</string>
<string name="i_am_student">我是学生</string>
<string name="i_am_teacher">我是老师</string>
<string name="head_photo">头像</string>
<string name="name">姓名</string>
<string name="answer_subject">解答科目</string>
<string name="login_time_out">服务器繁忙，请稍等片刻再尝试。</string>
<string name="image_file_invalid_err">存储访问失败，相机无法启动</string>
<string name="back_camera_not_found">未找到后置摄像头，相机无法启动</string>
<string name="fail_to_connect_to_camera_service">相机无法访问</string>
<string name="from_camera">拍照</string>
<string name="from_gallery">相册</string>
<string name="home_tab">首页</string>
<string name="questions_tab">问题</string>
<string name="questions_for_teacher_tab">解答</string>
<string name="ask_tab">拍照提问</string>
<string name="messages_tab">消息</string>
<string name="discover_tab">发现</string>
<string name="settings">设置</string>
<string name="profile">我</string>
<string name="answered_total">随身家教已解答难题</string>
<string name="asked_total">学生已提问</string>
<string name="recent_answers">最新解答</string>
<string name="recent_unanswers">学生正在问</string>
<string name="submit_confirm">是否提交问题？</string>
<string name="discard_picture_confirm">确定要删除图片吗？</string>
<string name="cancel_create_question_confirm">确定要取消提问吗？</string>
<string name="question_create_completed">难题已经抛给老师了</string>
<string name="question_create_completed1">等一下就有老师亲自来讲解啦~</string>
<string name="back_to_questions">返回到待解答列表</string>
<string name="question_default_desc">这道题不太懂呢，麻烦老师详细解答一下~</string>
<string name="question_picture_upload_failed">图片上传失败，问题加入草稿</string>
<string name="question_no_picture">请添加问题图片</string>
<string name="double_click_exit">"再点一次退出程序"</string>
<string name="undo">撤销</string>
<string name="redo">恢复</string>
<string name="submit_question">提交</string>
<string name="no_record">本问题没有录播文件</string>
<string name="push_and_talk_to_attach_voice">按住说话对题目进行语音补充</string>
<string name="push_to_talk">按住说话</string>
<string name="post">发送</string>
<string name="release_to_complete">松开结束</string>
<string name="slide_up_to_cancel">手指上划 取消发送</string>
<string name="release_to_cancel">松开取消发送</string>
<string name="record_voice_failed_alert">录音失败，请检查手机是否支持</string>
<string name="voice_too_short_alert">说话时间太短</string>
<string name="attach_text_hint">输入问题补充，单条不超过16个字</string>
<string name="stroke_size">画笔大小</string>
<string name="voice_out_of_limit">语音标签最长为30秒</string>
<string name="question_edit">问题编辑</string>
<string name="question_detail">问题详情</string>
<string name="appointment_detail_text">预约详情</string>
<string name="lilili">李丽丽</string>
<string name="answered">解答</string>
<string name="teacher">老师</string>
<string name="student">同学</string>
<string name="invalid_question">问题无效</string>
<string name="a_moment_ago">刚刚</string>
<string name="minutes_before">分钟前</string>
<string name="today">今天</string>
<string name="yesterday">昨天</string>
<string name="teacher_not_confirmed">老师未确认</string>
<string name="confirmed">已确认</string>
<string name="appointment_date_colon">预约时间：</string>
<string name="expand_all">展开全部</string>
<string name="collapse_all">收起全部</string>
<string name="fold_question_pictures_text_tail_part">张提问图片</string>
<string name="appointment">预约</string>
<string name="not_appointment">不预约</string>
<string name="appointment_tip">温馨提示\n预约能提高被解答几率，不预约就要慢慢等待咯~</string>
<string name="appointment_status_new">待确认</string>
<string name="appointment_status_accepted">已确认</string>
<string name="appointment_status_done">已解答</string>
<string name="appointment_status_expired">已失效</string>
<string name="crop__saving">Saving picture…</string>
<string name="crop__wait">Please wait…</string>
<string name="crop__pick_error">No imageUrl sources available</string>
<string name="crop__done">DONE</string>
<string name="crop__cancel" tools:ignore="ButtonCase">CANCEL</string>
<string name="xlistview_footer_hint_normal">更多问题 …</string>
<string name="xlistview_footer_hint_ready">松开载入更多</string>
<string name="question_draft">草稿</string>
<string name="question_waiting">待解答</string>
<string name="question_locked">待解答</string>
<string name="question_proposed">已解答</string>
<string name="question_answered">已解答</string>
<string name="question_rejected">退回</string>
<string name="ask_question_tip">把问题拍下来向老师提问吧</string>
<string name="hide_sigh">隐藏标记</string>
<string name="page_index">1/5</string>
<string name="commit_feedback_success">感谢您的反馈，我们将尽快处理</string>
<string name="feedback">意见反馈</string>
<string name="commit_idea">请输入您的宝贵意见，我们将做得更好，谢谢！</string>
<string name="limit_count">200</string>
<string name="notify_message">消息通知</string>
<string name="upload_error_tip">图片上传失败，请重新拍照</string>
<string name="download_error_student">图片加载失败，请等待老师重新拍照</string>
<string name="download_error_teacher">图片加载失败，请等待学生重新拍照</string>
<string name="really_to_exit">已经完全理解，确定要离开么?</string>
<string name="if_completed_answering">已完成解题?</string>
<string name="congratulation_solve">恭喜你，又攻克了一道难题了！</string>
<string name="question_has_been_solved">问题已成功解答！\n辛苦了</string>
<string name="uploading_image">传图中</string>
<string name="back_to_list">返回到已解答列表</string>
<string name="go_to_answer_more">去解答更多题目</string>
<string name="really_to_exit_conversation">老师还未完成解答，离开教室将要等待老师下次解答，确定离开吗？</string>
<string name="teacher_answered_and_leave">老师已解答完毕并离开，可以自由观看或者离开~</string>
<string name="lock_operation_not_allowed">白板已锁定，请耐心听老师解题，学生不可翻页、传图或使用画笔。</string>
<string name="lock_operation_allowed">白板已解锁，学生可翻页、传图或使用画笔</string>
<string name="other_in_conversation_fail">对方进入白板失败，请退出重新呼叫</string>
<string name="other_offline_tip">对方已掉线，连接已断开</string>
<string name="other_leave_tip">对方已离开，连接已断开</string>
<string name="transfer_image_fail">传图失败</string>
<string name="transfer_image_complete">传图完成</string>
<string name="download_fail">下载失败</string>
<string name="download_complete">下载完成</string>
<string name="download_image">下载图片</string>
<string name="teacher_other_net_busy">学生的网络不佳，可能影响白板操作</string>
<string name="student_other_net_busy">老师的网络不佳，可能影响白板操作</string>
<string name="student_other_audio_busy">老师的网络不佳，可能影响通话效果</string>
<string name="teacher_other_audio_busy">学生的网络不佳，可能影响通话效果</string>
<string name="yourself_net_busy">您的网络不佳，可能影响白板操作，请检查您的网络</string>
<string name="yourself_audio_busy">您的网络不佳，可能影响通话效果，请检查您的网络</string>
<string name="default_wb_time_text">0:00</string>
<string name="teacher_waiting_for_student_confirm">请稍候，正在询问学生是否已完全理解。</string>
<string name="student_cannot_op_note">老师讲解中，暂时无法操作</string>
<string name="student_operation">学生操作</string>
<string name="answer_time">解答时长</string>
<string name="operate_fail">操作失败，请稍后重试…</string>
<string name="player_timer">00:00/00:00</string>
<string name="leave_button">离开教室</string>
<string name="finish_text">结束</string>
<string name="complete_text">完成</string>
<string name="leave_text">离开</string>
<string name="leave_later">稍后</string>
<string name="teacher_complete_button">已完成</string>
<string name="teacher_leave_text">选择“已完成”，等待学生确认；选择“离开教室”，将不保留解答记录</string>
<string name="student_leave_text">老师还没完成讲解，离开教室将要等待老师下次解答，确定离开吗？</string>
<string name="student_confirm_text">老师已完成讲解，同学是否已经明白如何解答？明白解答可自由离开</string>
<string name="teacher_waiting_confirm">正在等待学生确认，请老师稍等</string>
<string name="teacher_get_confirm">感谢老师的解答，学生已明白如何解答，请老师自由离开</string>
<string name="teacher_get_not_confirm">学生还有疑惑的地方，请老师继续解答 :)</string>
<string name="student_confirm_button">是的明白...</string>
<string name="teacher_waiting_student_confirm_button">等待...</string>
<string name="student_not_confirm_button">还想问老师</string>
<string name="teacher_2_minutes_leave">学生已离开教室，感谢老师的解答，教室将在2分钟后断开连接</string>
<string name="student_2_minutes_leave">老师已离开教室，感谢同学的听讲，教室将在2分钟后断开连接</string>
<string name="teacher_try_reconnecting">老师正在尝试返回教室，请稍等</string>
<string name="student_try_reconnecting">学生正在尝试返回教室，请稍等</string>
<string name="i_am_offline_text">教室连接断开，请检查您的网络</string>
<string name="two_minutes_after_offline">教室连接断开</string>
<string name="teacher_online_again">已返回教室，请老师继续讲解</string>
<string name="student_online_again">已返回教室，请学生继续听讲</string>
<string name="teacher_offline_timeout">暂时无法返回教室，请重新呼叫学生</string>
<string name="student_offline_timeout">暂时无法返回教室，请等待老师重新呼叫</string>
<string name="student_other_offline_timeout">老师无法返回教室，教室即将断开连接，请同学尽快离开教室，等待老师呼叫</string>
<string name="teacher_other_offline_timeout">学生无法返回教室，教室即将断开连接，请老师尽快离开教室，重新呼叫学生</string>
<string name="teacher_taking_photo">老师正在拍照</string>
<string name="call_back_waiting">您正在进行即时解答呼叫</string>
</resources>